Configuration to deploy on githubpages.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: default
 ---
 
 <div class="content">
-  <img src="images/apito.gif" alt="Apito" class="small-gif" />
+  <img src="{{ site.baseurl }}images/apito.gif" alt="Apito" class="small-gif" />
   <img src="images/cuica.gif" alt="Cuíca" class="small-gif" />
   <img src="images/coracao.gif" alt="Coração" />
   <img src="images/pandeiro.gif" alt="Pandeiro" class="small-gif" />
