Add sounds to images.

--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@ layout: default
 ---
 
 <div class="content">
-  <img src="images/apito.gif" alt="Apito" class="small-gif" />
-  <img src="images/cuica.gif" alt="Cuíca" class="small-gif" />
-  <img src="images/coracao.gif" alt="Coração" />
-  <img src="images/pandeiro.gif" alt="Pandeiro" class="small-gif" />
-  <img src="images/tamborim.gif" alt="Tamborim" class="small-gif" />
-  <img src="images/chacoalho.gif" alt="Chacoalho" class="small-gif" />
+  <img src="images/apito.gif" alt="Apito" class="small-gif" id="apito" />
+  <img src="images/cuica.gif" alt="Cuíca" class="small-gif" id="cuica" />
+  <img src="images/coracao.gif" alt="Coração" id= "coracao" />
+  <img src="images/pandeiro.gif" alt="Pandeiro" class="small-gif" id="pandeiro" />
+  <img src="images/tamborim.gif" alt="Tamborim" class="small-gif" id="tamborim" />
+  <img src="images/chacoalho.gif" alt="Chacoalho" class="small-gif" id="chacoalho" />
 </div>
 
 <footer class="footer">
@@ -31,3 +31,7 @@ layout: default
     </a>
   </div>
 </footer>
+
+<script type="text/javascript" src="https://code.jquery.com/jquery-2.1.3.min.js" ></script>
+<script type="text/javascript" src="js/buzz.min.js" ></script>
+<script type="text/javascript" src="js/main.js"></script>
