Add images and stop gif when is clicked.

--- a/index.html
+++ b/index.html
@@ -3,12 +3,33 @@ layout: default
 ---
 
 <div class="content">
-  <img src="images/apito.gif" alt="Apito" class="small-gif" id="apito" />
-  <img src="images/cuica.gif" alt="Cuíca" class="small-gif" id="cuica" />
-  <img src="images/coracao.gif" alt="Coração" id= "coracao" />
-  <img src="images/pandeiro.gif" alt="Pandeiro" class="small-gif" id="pandeiro" />
-  <img src="images/tamborim.gif" alt="Tamborim" class="small-gif" id="tamborim" />
-  <img src="images/chacoalho.gif" alt="Chacoalho" class="small-gif" id="chacoalho" />
+  <ul class="image-list">
+    <li class="apito">
+      <img src="images/apito.png" alt="Apito" class="small-png" />
+      <img src="images/apito.gif" alt="Apito" class="small-gif" />
+    </li>
+    <li class="cuica">
+      <img src="images/cuica.png" alt="Cuíca" class="small-png" />
+      <img src="images/cuica.gif" alt="Cuíca" class="small-gif" />
+    </li>
+    <li class="coracao">
+      <img src="images/coracao.png" alt="Coração" class="small-png" />
+      <img src="images/coracao.gif" alt="Coração" />
+    </li>
+    <li class="pandeiro">
+      <img src="images/pandeiro.png" alt="Pandeiro" class="small-png" />
+      <img src="images/pandeiro.gif" alt="Pandeiro" class="small-gif" />
+    </li>
+    <li class="tamborim">
+      <img src="images/tamborim.png" alt="Tamborim" class="small-png" />
+      <img src="images/tamborim.gif" alt="Tamborim" class="small-gif" />
+    </li>
+    <li class="chocalho">
+      <img src="images/chocalho.png" alt="Chocalho" class="small-png" />
+      <img src="images/chocalho.gif" alt="Chocalho" class="small-gif" />
+    </li>
+
+  </ul>
 </div>
 
 <footer class="footer">
