Add details page to show advertise for blood donation.

--- a/index.html
+++ b/index.html
@@ -13,8 +13,9 @@ layout: default
       <img src="images/cuica.gif" alt="Cuíca" class="small-gif" />
     </li>
     <li class="coracao">
-      <img src="images/coracao.png" alt="Coração" class="small-png" />
-      <img src="images/coracao.gif" alt="Coração" />
+      <a href="{{ site.baseurl }}/details">
+        <img src="images/coracao.gif" alt="Coração" />
+      </a>
     </li>
     <li class="pandeiro">
       <img src="images/pandeiro.png" alt="Pandeiro" class="small-png" />
