Fixes some layout details.

--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@ layout: default
 <footer class="footer">
   <div class="supporter">
     <p>Apoio:</p>
-    <a href="#">
+    <a href="http://www.elefante.cc">
       <img src="images/logo-elefante.png" alt="Apito" />
     </a>
-    <a href="#">
+    <a href="https://www.facebook.com/geteloquent">
       <img src="images/logo-eloquent.png" alt="Apito" class="small-image" />
     </a>
   </div>
@@ -48,7 +48,7 @@ layout: default
     <p>os instrumentos e faça sua música.</p>
   </div>
   <div class="partner">
-    <a href="#">
+    <a href="http://www.novojeito.com.br/">
       <img src="images/novojeito.png" alt="Apito" />
     </a>
   </div>
