--- a/details/index.html
+++ b/details/index.html
@@ -9,23 +9,23 @@ layout: default
   <div class="info-back">
     <a href="{{ site.baseurl }}/">
       <img src="{{ site.baseurl }}/images/reload.png" alt="">
+      <p>Quero tocar novamente sem desligar o som do coração.</p>
     </a>
-    <p>Quero tocar novamente sem desligar o som do coração.</p>
   </div>
 </div>
 
 <footer class="footer">
   <div class="supporter">
     <p>Apoio:</p>
-    <a href="#">
+    <a href="http://www.elefante.cc">
       <img src="{{ site.baseurl }}/images/logo-elefante.png" alt="Apito" />
     </a>
-    <a href="#">
+    <a href="https://www.facebook.com/geteloquent">
       <img src="{{ site.baseurl }}/images/logo-eloquent.png" alt="Apito" class="small-image" />
     </a>
   </div>
   <div class="partner">
-    <a href="#">
+    <a href="http://www.novojeito.com.br/">
       <img src="{{ site.baseurl }}/images/novojeito.png" alt="Apito" />
     </a>
   </div>
